# ta-learn

./: .gitignore  common.py  pyproject.toml  sm.py
script/: add.py  arbitrage_triangular.py  bl.py  demo.py  demo2.py
ta_learn/: chat_gpt.py  common.py  csv_utils.py  dev01_ma.py  dev02_cli.py  dev03_arbitrage_triangular.py  dev03_sa.py  dev04_automatic_invest.py  dev05_regular_investment.py  main.py  phase01.py  phase02.py  records.csv  records2.csv
